Playback shortcuts don't work in Spreadsheet Editor. #109663

Closed
opened 2023-07-03 18:35:04 +02:00 by Loïc DAUTRY · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-03 07:01, hash: 1a758aa79363
Also tried 3.0.0, 3.3.1, 3.5.1 and 3.6.0.
Worked: n/a

Short description of error
Playback shortcuts (such as play animation or next/previous frames) don't work in Spreadsheet Editor.

Exact steps for others to reproduce the error
Open the Spreadsheet editor and try using any of the default playback shortcuts.

These are the default playback shortcuts I have:

playback shortcuts

To my knowledge, they are assigned on the global screen level, so unless your mouse cursor is outside of Blender's window or Blender isn't the active window, they should work no matter where you are in Blender.

But when in the Spreadsheet, nothing works. Even though there seems to be no other keymap assignation that overrides these keys in that editor. See example with searching all spacebar (play animation) shortcut:

spacebar search

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: `4.0.0` Alpha, branch: main, commit date: 2023-07-03 07:01, hash: `1a758aa79363` Also tried `3.0.0`, `3.3.1`, `3.5.1` and `3.6.0`. Worked: n/a **Short description of error** Playback shortcuts (such as play animation or next/previous frames) don't work in Spreadsheet Editor. **Exact steps for others to reproduce the error** Open the Spreadsheet editor and try using any of the default playback shortcuts. These are the default playback shortcuts I have: ![playback shortcuts](/attachments/1eb6f2c1-8d83-4941-accd-f12a5136f3a4) To my knowledge, they are assigned on the global screen level, so unless your mouse cursor is outside of Blender's window or Blender isn't the active window, they should work no matter where you are in Blender. But when in the Spreadsheet, nothing works. Even though there seems to be no other keymap assignation that overrides these keys in that editor. See example with searching all spacebar (play animation) shortcut: ![spacebar search](/attachments/0095eb19-14f4-401e-993d-af4894b72136)
123 KiB
162 KiB
Loïc DAUTRY added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-03 18:35:05 +02:00
Member

Hi, I'm able to play animation in the spread sheet like this:

图片

Hi, I'm able to play animation in the spread sheet like this: ![图片](/attachments/e8a3e12c-1e9c-4d24-969a-d1748ecb6d37)
YimingWu added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-04 04:36:36 +02:00
Member

Hi, this has been reported before.
We had a patch for this. Need to resubmit it on new platform: https://archive.blender.org/developer/D13195

Hi, this has been reported before. We had a patch for this. Need to resubmit it on new platform: https://archive.blender.org/developer/D13195
Blender Bot added
Status
Archived
and removed
Status
Needs Information from User
labels 2023-07-04 04:52:02 +02:00
Pratik Borhade added
Status
Duplicate
and removed
Status
Archived
labels 2023-07-04 04:52:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109663
No description provided.