Fix #109663: Allow Animation Keymap in Spreadsheet Editor

Allow starting and stopping animation, changing frames, etc while in
the Spreadsheet Editor.

Pull Request: https://projects.blender.org/blender/blender/pulls/110404