source/blender/editors/space_spreadsheet/space_spreadsheet.cc
@@ -726,7 +726,7 @@ void ED_spacetype_spreadsheet()
   /* regions: main window */
   art = MEM_cnew<ARegionType>("spacetype spreadsheet region");
   art->regionid = RGN_TYPE_WINDOW;
-  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D;
+  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D | ED_KEYMAP_FRAMES;
   art->lock = 1;
 
   art->init = spreadsheet_main_region_init;
@@ -739,7 +739,7 @@ void ED_spacetype_spreadsheet()
   art->regionid = RGN_TYPE_HEADER;
   art->prefsizey = HEADERY;
   art->keymapflag = 0;
-  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D | ED_KEYMAP_HEADER;
+  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D | ED_KEYMAP_HEADER | ED_KEYMAP_FRAMES;
   art->lock = 1;
 
   art->init = spreadsheet_header_region_init;
@@ -753,7 +753,7 @@ void ED_spacetype_spreadsheet()
   art->regionid = RGN_TYPE_FOOTER;
   art->prefsizey = HEADERY;
   art->keymapflag = 0;
-  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D | ED_KEYMAP_HEADER;
+  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_VIEW2D | ED_KEYMAP_HEADER | ED_KEYMAP_FRAMES;
   art->lock = 1;
 
   art->init = spreadsheet_footer_region_init;
@@ -782,7 +782,7 @@ void ED_spacetype_spreadsheet()
   art = MEM_cnew<ARegionType>("spreadsheet dataset region");
   art->regionid = RGN_TYPE_TOOLS;
   art->prefsizex = 150 + V2D_SCROLL_WIDTH;
-  art->keymapflag = ED_KEYMAP_UI;
+  art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_FRAMES;
   art->lock = 1;
   art->init = ED_region_panels_init;
   art->draw = spreadsheet_dataset_region_draw;
